2007-03-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* Work/tmDataSetup.R: The datasets acq and crude can now be
	created on the fly.

	* R/stopwords.R: Introduced a function returning the stopwords for
	a given language (English, German and French at the moment)

	* R/textdoccol.R (stemDoc): Stemming uses Rstem if available,
	otherwise falls back to Snowball package.

2007-01-30  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/dissimilarity-methods.Rd: Make clear that any method offered
	by "dists" from package "cba" can be used.

2007-01-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/doc/tm.Rnw: Fixed quotes-appearing-as-boxes-bug according
	to Kurt's latex suggestion. Removed points and underscores in
	variable names for consistent naming.

	* DESCRIPTION: Update to version 0.1-2.

	* man/TextRepository.Rd: Fixed bug in documentation.

2007-01-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* DESCRIPTION: Update to version 0.1-1.

2007-01-09  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (stemDoc): Use Rstem::wordStem instead of
	wordStem.

2007-01-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Changes due to Kurt's review.

2006-12-31  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/: Implemented improvements based upon comments by David
	Meyer.

2006-12-17  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/doc/: Rewrote vignette.

	* man/: Improved documentation.

2006-12-16  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Updated documentation.

	* DESCRIPTION: Changed package name to "tm". Updated version to
	0.1 for first CRAN release.

	* inst/texts/gmane.comp.lang.r.general.mbox: mbox Gmane R mailing
	list archive example.

	* inst/texts/gmane.comp.lang.r.gr.rdf: RSS Gmane R mailing list
	archive example.

	* R/preprocess.R (convert_mbox_eml): A simple e-mail converter
	from (several mails per box) mbox format to (single mail per file)
	eml format.

2006-12-08  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* data/crude.rda: Rebuilt.
