@@ -3,14 +3,14 @@
 # Reader
 
 readPlain <- function(...) {
-    function(elem, load, id) {
+    function(elem, load, language, id) {
         doc <- if (load) {
             new("PlainTextDocument", .Data = elem$content, URI = elem$uri, Cached = TRUE,
-                Author = "", DateTimeStamp = Sys.time(), Description = "", ID = id, Origin = "", Heading = "")
+                Author = "", DateTimeStamp = Sys.time(), Description = "", ID = id, Origin = "", Heading = "", Language = language)
         }
         else {
             new("PlainTextDocument", URI = elem$uri, Cached = FALSE,
-                Author = "", DateTimeStamp = Sys.time(), Description = "", ID = id, Origin = "", Heading = "")
+                Author = "", DateTimeStamp = Sys.time(), Description = "", ID = id, Origin = "", Heading = "", Language = language)
         }
 
         return(doc)
@@ -19,7 +19,7 @@ readPlain <- function(...) {
 class(readPlain) <- "FunctionGenerator"
 
 readReut21578XML <- function(...) {
-    function(elem, load, id) {
+    function(elem, load, language, id) {
         corpus <- paste(elem$content, "\n", collapse = "")
         tree <- xmlTreeParse(corpus, asText = TRUE)
         node <- xmlRoot(tree)
@@ -47,11 +47,11 @@ readReut21578XML <- function(...) {
         doc <- if (load) {
             new("XMLTextDocument", .Data = tree, URI = elem$uri, Cached = TRUE, Author = author,
                 DateTimeStamp = datetimestamp, Description = "", ID = id, Origin = "Reuters-21578 XML",
-                Heading = heading, LocalMetaData = list(Topics = topics))
+                Heading = heading, Language = language, LocalMetaData = list(Topics = topics))
         } else {
             new("XMLTextDocument", URI = elem$uri, Cached = FALSE, Author = author,
                 DateTimeStamp = datetimestamp, Description = "", ID = id, Origin = "Reuters-21578 XML",
-                Heading = heading, LocalMetaData = list(Topics = topics))
+                Heading = heading, Language = language, LocalMetaData = list(Topics = topics))
         }
 
         return(doc)
@@ -60,7 +60,7 @@ readReut21578XML <- function(...) {
 class(readReut21578XML) <- "FunctionGenerator"
 
 readRCV1 <- function(...) {
-    function(elem, load, id) {
+    function(elem, load, language, id) {
         corpus <- paste(elem$content, "\n", collapse = "")
         tree <- xmlTreeParse(corpus, asText = TRUE)
         node <- xmlRoot(tree)
@@ -75,11 +75,11 @@ readRCV1 <- function(...) {
         doc <- if (load) {
             new("XMLTextDocument", .Data = tree, URI = elem$uri, Cached = TRUE, Author = "",
                 DateTimeStamp = datetimestamp, Description = "", ID = id, Origin = "Reuters Corpus Volume 1 XML",
-                Heading = heading)
+                Heading = heading, Language = language)
         } else {
             new("XMLTextDocument", URI = elem$uri, Cached = FALSE, Author = "",
                 DateTimeStamp = datetimestamp, Description = "", ID = id, Origin = "Reuters Corpus Volume 1 XML",
-                Heading = heading)
+                Heading = heading, Language = language)
         }
 
         return(doc)
@@ -88,7 +88,7 @@ readRCV1 <- function(...) {
 class(readRCV1) <- "FunctionGenerator"
 
 readNewsgroup <- function(...) {
-    function(elem, load, id) {
+    function(elem, load, language, id) {
         mail <- elem$content
         author <- gsub("From: ", "", grep("^From:", mail, value = TRUE))
         datetimestamp <- as.POSIXct(strptime(gsub("Date: ", "", grep("^Date:", mail, value = TRUE)), format = "%d %B %Y %H:%M:%S"))
@@ -108,10 +108,10 @@ readNewsgroup <- function(...) {
             new("NewsgroupDocument", .Data = content, URI = elem$uri, Cached = TRUE,
                 Author = author, DateTimeStamp = datetimestamp,
                 Description = "", ID = id, Origin = origin,
-                Heading = heading, Newsgroup = newsgroup)
+                Heading = heading, Language = language, Newsgroup = newsgroup)
         } else {
             new("NewsgroupDocument", URI = elem$uri, Cached = FALSE, Author = author, DateTimeStamp = datetimestamp,
-                Description = "", ID = id, Origin = origin, Heading = heading, Newsgroup = newsgroup)
+                Description = "", ID = id, Origin = origin, Heading = heading, Language = language, Newsgroup = newsgroup)
         }
 
         return(doc)
@@ -120,7 +120,7 @@ readNewsgroup <- function(...) {
 class(readNewsgroup) <- "FunctionGenerator"
 
 readGmane <- function(...) {
-    function(elem, load, id) {
+    function(elem, load, language, id) {
         corpus <- paste(elem$content, "\n", collapse = "")
         # Remove namespaces
         corpus <- gsub("dc:date", "date", corpus)
@@ -141,10 +141,10 @@ readGmane <- function(...) {
             new("NewsgroupDocument", .Data = content, URI = elem$uri, Cached = TRUE,
                 Author = author, DateTimeStamp = datetimestamp,
                 Description = "", ID = id, Origin = origin,
-                Heading = heading, Newsgroup = newsgroup)
+                Heading = heading, Language = language, Newsgroup = newsgroup)
         } else {
             new("NewsgroupDocument", URI = elem$uri, Cached = FALSE, Author = author, DateTimeStamp = datetimestamp,
-                Description = "", ID = id, Origin = origin, Heading = heading, Newsgroup = newsgroup)
+                Description = "", ID = id, Origin = origin, Heading = heading, Language = language, Newsgroup = newsgroup)
         }
 
         return(doc)
@@ -162,7 +162,7 @@ convertRCV1Plain <- function(node, ...) {
     heading <- xmlValue(node[["title"]])
 
     new("PlainTextDocument", .Data = corpus, Cached = TRUE, URI = "", Author = "", DateTimeStamp = datetimestamp,
-        Description = "", ID = id, Origin = "Reuters Corpus Volume 1 XML", Heading = heading)
+        Description = "", ID = id, Origin = "Reuters Corpus Volume 1 XML", Heading = heading, Language = "en_US")
 }
 
 # Parse a <REUTERS></REUTERS> element from a well-formed Reuters-21578 XML file
@@ -192,5 +192,6 @@ convertReut21578XMLPlain <- function(node, ...) {
     topics <- unlist(xmlApply(node[["TOPICS"]], function(x) xmlValue(x)), use.names = FALSE)
 
     new("PlainTextDocument", .Data = corpus, Cached = TRUE, URI = "", Author = author, DateTimeStamp = datetimestamp,
-        Description = description, ID = id, Origin = "Reuters-21578 XML", Heading = heading, LocalMetaData = list(Topics = topics))
+        Description = description, ID = id, Origin = "Reuters-21578 XML", Heading = heading, Language = "en_US",
+        LocalMetaData = list(Topics = topics))
 }
