@@ -1,3 +1,13 @@
+2007-03-16  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/resolve.R (resolveISOcode): Extracts the language from a ISO
+	language code.
+
+	* R/textdoccol.R (TextDocCol): Refactored several parser arguments
+	into parserControl argument.
+
+	* R/aobjects.R (TextDocument): Introduced the "Language" slot.
+
 2007-03-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* Work/tmDataSetup.R: The datasets acq and crude can now be
